# TempMainRepo

./: .gitignore  1.argos  CMakeLists.txt  CMakeLists_old.txt  Environment.cpp  Position.h  README.md  data-general.txt  data-robots.txt  hl.argos  mainScript.sh  output.txt  profile.txt  run.sh  stupid.sh
JavaNetworkingProject/src/try03/: Server.java
cmake/: FindGALIB.cmake
controllers/: CMakeLists.txt
controllers/alibot/: CMakeLists.txt  alibot.cpp  alibot.h
controllers/basicbot/: CMakeLists.txt  basicbot.cpp  basicbot.h
environment/: node.cpp  node.h
environment/pathfinding/: aStar.cpp  aStar.h
experiments/: 1.argos  firstConf.argos  secondConf.argos
loop_functions/: CMakeLists.txt
loop_functions/communicator_loop_functions/: CMakeLists.txt  CMakeLists.txt.save  communicator_loop_functions.cpp  communicator_loop_functions.h
source/: CMakeLists.txt  robotManager.h
source/orders/: Order.h  OrderManager.h
src/: CMakeLists.txt  customDataStructures.h  includefile.h  robotManager.h  robotWrapper.h
src/argos/: CMakeLists.txt
src/argos/controllers/basicbot/: CMakeLists.txt  basicbot.cpp  basicbot.h
src/argos/dev/: WareHouse_bot_controller.cpp  WareHouse_bot_controller.h  WareHouse_loop_functions.cpp  WareHouse_loop_functions.h  WareHouse_qt_user_functions.cpp  WareHouse_qt_user_functions.h  communicator_loop_functions_dev.cpp  communicator_loop_functions_dev.h  paintpath.h
src/argos/loop_functions/: CMakeLists.txt
src/argos/loop_functions/communicator_loop_functions/: CMakeLists.txt  communicator_loop_functions.cpp
src/data/: DataCollector.cpp  DataCollector.h
src/datatypes/: CMakeLists.txt  Coordinate.cpp  Coordinate.h  Path.cpp  Path.h  direction.h  ds_instruction.h  instruction.h  message.h
src/headers/: Astar.h  Coordinate.h  DataCollector.h  EnvironmentManager.h  Node.h  Order.h  OrderManager.h  Path.h  Pathfinder.h  PickStation.h  PickStationManager.h  Pod.h  PodManager.h  RobotManager.h  RobotWrapper.h  Warehouse.h
src/imp/: Astar.cpp  Coordinate.cpp  DataCollector.cpp  EnvironmentManager.cpp  Node.cpp  Order.cpp  OrderManager.cpp  Path.cpp  Pathfinder.cpp  PickStation.cpp  PickStationManager.cpp  Pod.cpp  PodManager.cpp  RobotManager.cpp  RobotWrapper.cpp  Warehouse.cpp
src/networking/: CMakeLists.txt  Networking.cpp  Networking.h
src/orders/: CMakeLists.txt  Order.cpp  Order.h  OrderManager.cpp  OrderManager.h
src/pathfinder/: Pathfinder.h
src/qrcodes/: CMakeLists.txt  QRCode.h
src/robots/: CMakeLists.txt  RobotManager.h  RobotWrapper.h
src/warehouse/: CMakeLists.txt  Warehouse.cpp  Warehouse.h
tests/: CMakeLists.txt  nodeTests.cpp
tests/unit_tests/: TestTemplate.cpp
